--- a/.github/workflows/master_azurebot-test-1.yml
+++ b/.github/workflows/master_azurebot-test-1.yml
@@ -20,9 +20,8 @@ jobs:
         with:
           node-version: '12.13.0'
 
-      - name: npm install, build, and test
+      - name: 'npm install, build, and test'
         run: |
-          npm install
           npm run build --if-present
           npm run test --if-present
 
