--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
         "start": "node ./index.js",
         "watch": "nodemon ./index.js",
         "lint": "eslint .",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "int-test": "mocha --require babel-core/register --recursive test"
+        "test": "mocha"
     },
     "repository": {
         "type": "git",
