test without exit

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "start": "node ./index.js",
         "watch": "nodemon ./index.js",
         "lint": "eslint .",
-        "test": "mocha"
+        "test": "echo \"Error: no test specified\""
     },
     "repository": {
         "type": "git",
