--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
         "url": "https://github.com"
     },
     "dependencies": {
+        "axios": "^0.19.2",
+        "babel-eslint": "^10.1.0",
         "botbuilder": "~4.9.1",
         "botbuilder-dialogs": "^4.9.2",
         "dotenv": "^8.2.0",
+        "request": "^2.88.2",
+        "request-promise": "^4.2.5",
         "restify": "~8.5.1"
     },
     "devDependencies": {
